# focus_annotator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  create_windows_installer.sh  docker-compose.windows.yml  docker-compose.yml  setup.iss
.github/workflows/: build_and_publish.yml  rust.yml
src/: constants.rs  main.rs
src/state/: mod.rs
src/ui/: mod.rs
