[package]
name = "focus-annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.1.0", package = "libadwaita" }
gtk = { version = "0.4", package = "gtk4" }
gls = { version = "0.1.6" }

