[package]
name = "focus-annotator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.1", package = "libadwaita" }
gtk = { version = "0.4", package = "gtk4" }
gls = { version = "0.1" }
serde = { version = "1.0", features = ["derive"]}
serde_json = {  version = "1.0" }
derive_builder = "0.10"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
